[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqchub"
version = "1.0.0"
description = "Python wrapper for PQChub - Universal Post-Quantum Cryptography binaries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QudsLab", email = "contact@qudslab.org"}
]
maintainers = [
    {name = "QudsLab", email = "contact@qudslab.org"}
]
keywords = [
    "cryptography",
    "post-quantum", 
    "quantum-resistant",
    "kyber",
    "dilithium",
    "falcon",
    "pqc",
    "nist"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/QudsLab/PQChub"
Repository = "https://github.com/QudsLab/PQChub"
Documentation = "https://github.com/QudsLab/PQChub/blob/main/docs/API.md"
Issues = "https://github.com/QudsLab/PQChub/issues"
Changelog = "https://github.com/QudsLab/PQChub/releases"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools]
packages = ["pqchub"]
package-dir = {"pqchub" = "."}

[tool.setuptools.package-data]
pqchub = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]