[package]
name = "pqchub"
version = "1.0.0"
edition = "2021"
authors = ["QudsLab <contact@qudslab.org>"]
description = "Rust wrapper for PQChub - Universal Post-Quantum Cryptography binaries"
repository = "https://github.com/QudsLab/PQChub"
homepage = "https://github.com/QudsLab/PQChub"
documentation = "https://github.com/QudsLab/PQChub/blob/main/docs/API.md"
readme = "README.md"
license = "MIT"
keywords = ["cryptography", "post-quantum", "quantum-resistant", "kyber", "dilithium"]
categories = ["cryptography", "algorithms"]
rust-version = "1.60"

[dependencies]
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
# No build dependencies needed - using pre-built binaries

[[bench]]
name = "kyber"
harness = false

[[bench]]
name = "dilithium"
harness = false

[lib]
name = "pqchub"
path = "src/lib.rs"

[features]
default = []
# Feature flags can be added here for optional algorithms